syntax = "proto2";
package sls.logs;

message Log
{
    required uint32 Time = 1;// UNIX Time Format
    message Content
    {
        required string Key = 1;
        required string Value = 2;
    }
    repeated Content Contents = 2;
    optional fixed32 Time_ns = 4;
}

message LogTag
{
    required string Key = 1;
    required string Value = 2;
}

message LogGroup
{
    repeated Log Logs= 1;
    optional string Topic = 3;
    optional string Source = 4;
    optional string MachineUUID = 5;
    repeated LogTag LogTags = 6;
}

message LogGroupList
{
    repeated LogGroup LogGroups = 1;
}


message LogRaw
{
    required uint32 Time = 1;// UNIX Time Format
    message Content
    {
        required string Key = 1;
        required bytes Value = 2;
    }
    repeated Content Contents= 2;
    optional fixed32 Time_ns = 4;
}

message LogTagRaw
{
    required string Key = 1;
    required string Value = 2;
}

message LogGroupRaw
{
    repeated LogRaw Logs= 1;
    optional string Topic = 3;
    optional string Source = 4;
    optional string MachineUUID = 5;
    repeated LogTagRaw LogTags = 6;
}

message LogGroupListRaw
{
    repeated LogGroupRaw LogGroups = 1;
}
